<resources>
    <string name="app_name">Golden Dynasty</string>

    <string name="home_activity_welcome">Welcome</string>
    <string name="home_activity_total_balance">Total balance</string>

    <string name="add_activity_income">Income</string>
    <string name="add_activity_lend">Lend</string>
    <string name="add_activity_borrow">Borrow</string>
    <string name="add_activity_expense">Expense</string>
    <string name="add_activity_header">Choose an action</string>

    <string name="home_navigation_bar">Home</string>
    <string name="gold_navigation_bar">Gold</string>
    <string name="add_navigation_bar">Add</string>
    <string name="map_navigation_bar">Map</string>
    <string name="profile_navigation_bar">Profile</string>
    <string name="amount">Amount</string>
    <string name="revenue">Revenue\n</string>
    <string name="done_content_description">Done</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="pick_category">Pick Category</string>
    <string name="submit">Submit</string>
    <string name="gold_price">Gold price</string>
    <string name="typeDown">Type ▼</string>
    <string name="typeUp">Type ▲</string>
    <string name="buyPriceUp">Buy Price ▲</string>
    <string name="buyPriceDown">Buy Price ▼</string>
    <string name="sellPriceUp">Sell Price ▲</string>
    <string name="sellPriceDown">Sell Price ▼</string>
    <string name="company">Company</string>
    <string name="type">Type ◆</string>
    <string name="buy_price">BuyPrice ◆</string>
    <string name="sell_price">Sell Price ◆</string>
    <string name="bank_interest_rates">Bank Interest Rates</string>
    <string name="bank">Bank ◆</string>
    <string name="header_1m">1M◆</string>
    <string name="header_3m">3M◆</string>
    <string name="header_6m">6M◆</string>
    <string name="header_9m">9M◆</string>
    <string name="header_12m">12M◆</string>
    <string name="header_18m">18M◆</string>
    <string name="header_24m">24M◆</string>

    <string name="header_1m_down">1M▼</string>
    <string name="header_1m_up">1M▲</string>

    <string name="header_3m_down">3M▼</string>
    <string name="header_3m_up">3M▲</string>

    <string name="header_6m_down">6M▼</string>
    <string name="header_6m_up">6M▲</string>

    <string name="header_9m_down">9M▼</string>
    <string name="header_9m_up">9M▲</string>

    <string name="header_12m_down">12M▼</string>
    <string name="header_12m_up">12M▲</string>

    <string name="header_18m_down">18M▼</string>
    <string name="header_18m_up">18M▲</string>

    <string name="header_24m_down">24M▼</string>
    <string name="header_24m_up">24M▲</string>

    <string name="bank_header_down">Bank ▼</string>
    <string name="bank_header_up">Bank ▲</string>

    <string name="up">▲</string>
</resources>