<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_navigation_bar" />
    <item
        android:id="@+id/navigation_gold_price"
        android:icon="@drawable/ic_gold"
        android:title="@string/gold_navigation_bar" />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_navigation_bar" />
    <item
        android:id="@+id/navigation_google_map"
        android:icon="@drawable/navigation_plan"
        android:title="Plan" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_navigation_bar" />
</menu>