<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_revenue"
    tools:context=".RevenueActivity">


    <TextView
        android:id="@+id/txtRevenueTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/revenue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/edtAmountRevenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtAmountRevenue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="557dp"
        android:autofillHints="creditCardNumber"
        android:ems="10"
        android:textAlignment="viewEnd"
        android:hint="@string/amount"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRevenueTitle" />

    <ImageButton
        android:id="@+id/imgBtnDone"
        android:layout_width="82dp"
        android:layout_height="78dp"
        android:layout_marginBottom="64dp"
        android:background="@color/blue"
        android:contentDescription="@string/done_content_description"
        app:layout_constraintBottom_toTopOf="@+id/edtAmountRevenue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_revenue_done" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCategory" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

    <EditText
        android:id="@+id/edtCategory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/pick_category"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/edtDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAmountRevenue" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="@color/blue"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDate" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>