<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/gold"
    tools:context=".PriceActivity"
    >

    <TextView
        android:id="@+id/gold_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gold_price"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="404dp"
        android:layout_height="583dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold_price_title">

        <TableLayout
            android:id="@+id/tableLayoutGoldPrice"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:padding="8dp"
            android:background="@color/gold">

            <!-- Table headers -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E2E2E2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/company"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/type"
                    android:textStyle="bold"
                    android:onClick="onTypeClick"/>

                <TextView
                    android:id="@+id/buy_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/buy_price"
                    android:textStyle="bold"
                    android:onClick="onBuyPriceClick"/>

                <TextView
                    android:id="@+id/sell_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/sell_price"
                    android:textStyle="bold"
                    android:onClick="onSellPriceClick"/>

            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/blue"
        android:onClick="onFindMapButtonClick"
        android:text="Find the nearest gold shop"
        android:textColorLink="#2196F3"
        app:icon="@drawable/fragment_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:text="* Unit: x 1000vnđ  "
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
