<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:id="@+id/scrollViewAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:paddingBottom="40dp">

            <ImageButton
                android:id="@+id/imageButtonRevenue"
                android:layout_width="152dp"
                android:layout_height="212dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/image_button_background"
                android:contentDescription="@string/add_activity_income"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_category_income" />

            <ImageButton
                android:id="@+id/categoryIbtn"
                android:layout_width="152dp"
                android:layout_height="212dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/image_button_background"
                android:contentDescription="@string/add_activity_expense"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_category_expense" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/add_activity_header"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="152dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_activity_income"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonRevenue" />

            <TextView
                android:id="@+id/categoryNameTv"
                android:layout_width="152dp"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_activity_expense"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryIbtn" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="152dp"
                android:layout_height="212dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/image_button_background"
                android:contentDescription="@string/add_activity_income"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/ic_category_lending" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="152dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_activity_lend"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="152dp"
                android:layout_height="212dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/image_button_background"
                android:contentDescription="@string/add_activity_income"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryNameTv"
                app:srcCompat="@drawable/ic_category_borrow" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="152dp"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/add_activity_borrow"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>